--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,6 @@ project(console_color_tests)
 set(SOURCE_FILES
         main.cpp
         )
-add_executable(console_color_tests_sym ${SOURCE_FILES})
+add_executable(console_color_tests ${SOURCE_FILES})
 
 include_directories(../include)
