--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,16 +15,18 @@ set(LIB_FILES_W32
         color_w32.cpp
         bgcolor_w32.cpp
         bright_w32.cpp
+        Win32Handler.cpp
+        reset_w32.cpp
+        reset_bgcolor_w32.cpp
+        reset_color_w32.cpp
         )
 
 include_directories(../include)
 
-add_library(console_color_lib STATIC ${LIB_FILES})
-
-#[[if (WIN32)
+if (WIN32)
     add_library(console_color_lib STATIC ${LIB_FILES_W32})
 else ()
     add_library(console_color_lib STATIC ${LIB_FILES})
-endif ()]]
+endif ()
 
 set_target_properties(console_color_lib PROPERTIES LINKER_LANGUAGE CXX)
